--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/karthikyadav3/Drops-UI-end-to-end-tests#readme",
   "devDependencies": {
-    "cypress": "^8.7.0"
+    "cypress": "^8.7.0",
+    "cypress-wait-until": "^1.7.1"
+  },
+  "dependencies": {
+    "adm-zip": "^0.5.9"
   }
 }
